# PythonPractice

./: .gitignore  README.md  main.py  pyproject.toml  test_devices.py
.github/workflows/: CI.yml
adapters/: __init__.py  ssh_adapter.py  telnet_adapter.py
adapters/psu/: __init__.py  sim.md  sim.py  sim_adapter.py  visa.md
core/: exceptions.py  main.py
devices/: __init__.py  devices.py  oven.py  signal_generator.py  spectrum_analyzer.py
devices/adapters/: __init__.py  ssh_adapter.py  telnet_adapter.py
devices/base/: BaseDevice.py  README.md  __init__.py  contracts.md  errors.py  types.py
devices/psu/: PsuDevice.py  README.md  __init__.py  device.py  driver.md  strategy.py  validators.md  yaml_config_loader.py
devices/psu/adapters/: SSH_adapter.py  __init__.py  interface.py  scpi_adapter.py  sim.md  sim_adapter.py  visa.md
devices/psu/config/: __init__.py  capabilities.yml  models.yml  ranges.yml
devices/psu/loader/: config_loader.py
devices/psu/strategies/: __init__.py  base.py  real.py  virtual.py
docs/: ARCHITECTURE.md
examples/: psu_demo.py
main/: devices.py  exceptions.py  main.py
test/: conftest.py  test_devices.py  test_psu.py
tests/: __init__.py  conftest.py
