[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-lab-demo"
version = "0.1.0"
description = "Demo project: device strategies, YAML config, and tests"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "devices",
  "core",
  "adapters",
  "examples",
  "test",
]
